--- a/styles.css
+++ b/styles.css
@@ -25,8 +25,8 @@
 }
 
 .grid-container > div {
-    
-    text-align: center;
+
+    text-align: left;
     padding: 2px;
     font-size: 15px;
     background-color: white;
@@ -81,3 +81,11 @@ TODO fix icons dimensions to 20x20px*/
 
 
 /* --- BODY --- */
+
+
+.hero {
+  display: flex;
+  justify-content: center;
+  padding: 10px;
+  background-color: white;
+}
