--- a/styles.css
+++ b/styles.css
@@ -54,7 +54,8 @@ span {
 
 .enjoy {
   text-transform: uppercase;
-  font-weight: bold;
+  font-size: larger;
+  font-weight:bold;
   text-align: center;
   color: rgb(86, 1, 86);
 }
