--- a/styles-mystory.css
+++ b/styles-mystory.css
@@ -1,9 +1,54 @@
+/*  --- ME AND MICHAL --- */
+.container-me-michal {
+    display: grid;
+    grid-template-columns: 1fr 1fr 3fr;
+    gap: auto;
+    margin-inline: auto;
+    justify-items: center;
+    max-width: 1500px;
+}
+
+.portrait {
+    width: 100%;
+    max-width: 250px;
+}
+
+.portrait > img {
+    width: 250px;
+    height: auto;
+}
+
+.cloud {
+    position: relative;
+    width: 100%;
+    max-width: 800px;
+    width: auto;
+}
+
+.cloud > img {
+    width: 800px;
+    height: 400px;
+}
+
+.text-field {
+    position: absolute;
+    top: 12%;
+    left: 22%;
+    transform: (-50%, -50%);
+    width: 580px;
+    height: 320px;
+    padding: 0px;
+    margin: 0px;
+}
+
+/*  --- LOOKING FOR MICHAL --- */
+
 .grid-with-doors {
     display: grid;
     grid-template-columns: 1fr 1fr 1fr 1fr ;
     gap: 10px;
     margin-inline: auto;
-    justify-items: left;
+    justify-items: center;
     max-width: 1200px;
 }
 .grid-with-doors > button {
@@ -52,10 +97,10 @@
     font-weight: normal;
     text-transform: uppercase;
 }
-
 .btn:hover{
     font-weight: bold;
 }
+
 #green {
     top: 20%;
     background-color: rgb(6, 105, 6);
@@ -138,4 +183,47 @@
     background: url("./images/doors1h.gif"), no-repeat;
     background-size: contain;
 }
+
+
+/*  --- INSIDE LOOKING FOR MICHAL > CLOUD WITH ME-COL --- */
+
+#cloud-with-text1 {
+    position: relative;
+    width: 100%;
+    max-width: 600px;
+    grid-column-start: 1;
+    grid-column-end: 3;
+}
+
+#cloud-with-text2 {
+    grid-column-start: 3;
+    grid-column-end: 5;
+}
+
+.small-cloud {
+    width: 600px;
+    height: 400px;
+}
+
+.me-small {
+    position: absolute;
+    top: 0%;
+    left: 0%;
+    transform: (-50%, -50%);
+    width: 150px;
+    height: 150px;
+    border: 3px;
+}
+
+.text-field-small {
+    position: absolute;
+    top: 38%;
+    left: 22%;
+    transform: (-50%, -50%);
+    width: 350px;
+    height: 230px;
+    padding: 0px;
+    margin: 0px;
+}
+
 
