White background, colorfull landimg

--- a/styles.css
+++ b/styles.css
@@ -3,7 +3,7 @@
 
 html {
   font-family: Verdana, Geneva, Tahoma, sans-serif;
-  background-color: rgb(203, 201, 199)
+  background-color: white
 } 
 
 a {
