--- a/styles-mystory.css
+++ b/styles-mystory.css
@@ -6,9 +6,12 @@
     margin-inline: auto;
     justify-items: center;
     max-width: 1500px;
+    background: url(./images/backg-match.gif);
 }
 
 .portrait {
+    margin: 20px;
+    margin-top: 50px;
     width: 100%;
     max-width: 250px;
 }
@@ -23,6 +26,8 @@
     width: 100%;
     max-width: 800px;
     width: auto;
+    margin: 20px;
+    margin-top: 50px;
 }
 
 .cloud > img {
@@ -39,6 +44,21 @@
     height: 320px;
     padding: 0px;
     margin: 0px;
+
+    overflow: hidden; /* Ensures the content is not revealed until the animation */
+    border-right: .15em solid orange; /* The typwriter cursor */
+    white-space: nowrap; /* Keeps the content on a single line */
+    margin: 0 auto; /* Gives that scrolling effect as the typing happens */
+    letter-spacing: .15em; /* Adjust as needed */
+    animation: 
+        typing 3.5s steps(30, end),
+        blink-caret .5s step-end infinite;
+}
+
+/* The typing effect */
+@keyframes typing {
+    from { width: 0 }
+    to { width: 100% }
 }
 
 /*  --- LOOKING FOR MICHAL --- */
