--- a/styles-mystory.css
+++ b/styles-mystory.css
@@ -201,6 +201,9 @@
 }
 
 #cloud-with-text2 {
+    position: relative;
+    width: 100%;
+    max-width: 600px;
     grid-column-start: 3;
     grid-column-end: 5;
 }
@@ -210,23 +213,13 @@
     height: 400px;
 }
 
-.me-small {
-    position: absolute;
-    top: 0%;
-    left: 0%;
-    transform: (-50%, -50%);
-    width: 150px;
-    height: 150px;
-    border: 3px;
-}
-
 .text-field-small {
     position: absolute;
-    top: 38%;
-    left: 22%;
+    top: 10%;
+    left: 25%;
     transform: (-50%, -50%);
-    width: 350px;
-    height: 230px;
+    width: 400px;
+    height: 330px;
     padding: 0px;
     margin: 0px;
 }
