--- a/styles-mystory.css
+++ b/styles-mystory.css
@@ -46,6 +46,7 @@
     margin: 0px;
 }
 
+
 /*  --- LOOKING FOR MICHAL --- */
 
 .grid-with-doors {
@@ -61,6 +62,7 @@
     height: 400px;
     padding: 0;
     border: none;
+    cursor: pointer;
 }
 
 .close  {
@@ -190,7 +192,7 @@
 }
 
 
-/*  --- INSIDE LOOKING FOR MICHAL > CLOUD WITH ME-COL --- */
+/*  --- INSIDE LOOKING FOR MICHAL > CLOUD WITH TEXT --- */
 
 #cloud-with-text1 {
     position: relative;
@@ -213,7 +215,18 @@
     height: 400px;
 }
 
-.text-field-small {
+#text-field-small {
+    position: absolute;
+    top: 10%;
+    left: 25%;
+    transform: (-50%, -50%);
+    width: 400px;
+    height: 330px;
+    padding: 0px;
+    margin: 0px;
+}
+
+#text-field-small2 {
     position: absolute;
     top: 10%;
     left: 25%;
