Added grid in artworks

--- a/styles.css
+++ b/styles.css
@@ -6,10 +6,17 @@ html {
   background-color: white;
 } 
 
-a {
+.no-dec-blc {
   text-decoration: none;
   color:black;
-  font-size: 30 px;
+}
+
+.relativ {
+    position: relative;
+}
+
+.marker {
+  font-family: 'Permanent Marker', cursive;
 }
 
 /* TODO layouts for different screen widths */ 
@@ -74,8 +81,8 @@ span {
 
 .cont-h1 > h1 {
   position: absolute;
-  font-weight:bold;
-  color: rgb(86, 1, 86);
+  font-weight: bold;
+  color: black;
 }
 
 .cont-h1 > img {
@@ -91,52 +98,51 @@ span {
   margin:auto
 }
 
-/* --- CLOUD WITH PORTRAIY AND TEXT --- */
+/* --- CLOUD WITH MY PORTRAIT AND TEXT --- */
 .container-me {
-    display: grid;
-    grid-template-columns: 1fr 3fr;
-    gap: auto;
-    margin-inline: auto;
-    justify-items: center;
-    max-width: 1500px;
-    background-image: url(./images/backimg2.gif);
+  display: grid;
+  grid-template-columns: 1fr 3fr;
+  gap: auto;
+  margin-inline: auto;
+  justify-items: center;
+  max-width: 1500px;
 }
 
 .portrait {
-    margin: 20px;
-    margin-top: 50px;
-    width: 100%;
-    max-width: 300px;
+  margin: 20px;
+  margin-top: 50px;
+  width: 100%;
+  max-width: 300px;
 }
 
 .portrait > img {
-    width: 300px;
-    height: auto;
+  width: 300px;
+  height: auto;
 }
 
 .cloud {
-    position: relative;
-    width: 100%;
-    max-width: 900px;
-    width: auto;
-    margin: 20px;
-    margin-top: 50px;
+  position: relative;
+  width: 100%;
+  max-width: 900px;
+  width: auto;
+  margin: 20px;
+  margin-top: 50px;
 }
 
 .cloud > img {
-    width: 900px;
-    height: 400px;
+  width: 900px;
+  height: 400px;
 }
 
 .text-field {
-    position: absolute;
-    top: 12%;
-    left: 22%;
-    transform: (-50%, -50%);
-    width: 580px;
-    height: 320px;
-    padding: 0px;
-    margin: 0px;
+  position: absolute;
+  top: 12%;
+  left: 22%;
+  transform: (-50%, -50%);
+  width: 580px;
+  height: 320px;
+  padding: 0px;
+  margin: 0px;
 }
 
 .cloud > p {
@@ -147,6 +153,14 @@ span {
 .ins-link {
   font-weight: bold;
   color: rgb(86, 1, 86);
+}
+
+.backg1 {
+  background-image: url(./images/backimg2.gif);
+}
+
+.backg2 {
+  background-image: url(./images/backimg3.gif);
 }
 
 /* --- GRID WITH PICTURES --- */
@@ -173,6 +187,11 @@ span {
   overflow: hidden;
 }
 
+.txt-in-grid {
+  position: absolute;
+  font-size: xx-large;
+  transform: translate(-50%, -50%);
+}
 .grid-with-story:hover {
   background:url(./images/bodycol.gif), no-repeat;
 }
