--- a/styles.css
+++ b/styles.css
@@ -6,6 +6,8 @@ html {
   background-color: white;
 } 
 
+/* FONTS */
+
 .no-dec-blc {
   text-decoration: none;
   color:black;
@@ -15,8 +17,9 @@ html {
     position: relative;
 }
 
-.marker {
-  font-family: 'Permanent Marker', cursive;
+.txt-xxl-ital {
+  font-size: xx-large;
+  font-style: italic;
 }
 
 /* TODO layouts for different screen widths */ 
@@ -145,11 +148,6 @@ span {
   margin: 0px;
 }
 
-.cloud > p {
-  font-size: xx-large;
-  font-style: italic;
-}
-
 .ins-link {
   font-weight: bold;
   color: rgb(86, 1, 86);
@@ -198,6 +196,7 @@ span {
 
 .body1:hover {
   background:url(./images/bodytxt1h.gif), no-repeat;
+  background-size: cover;
 }
 
 .body2:hover {
@@ -230,7 +229,8 @@ span {
   display: block;
   margin-left: 20px;
   margin-top: 10px;
-  font-size: large;
+  font-size: x-large;
+  font-weight: normal;
 }
 
 .link:hover {
