--- a/styles.css
+++ b/styles.css
@@ -1,11 +1,8 @@
-/* --- HEADER --- */
-/* grid in header - layout */
 
 html {
   font-family: Garamond, Verdana, Geneva, Tahoma, sans-serif;
-  background-color: white;
+  scroll-behavior: smooth !important;
 } 
-
 /* FONTS */
 .courier {
   font-family: 'Courier New', Courier, monospace;
@@ -41,6 +38,8 @@ html {
   font-size: 50px;
 }
 
+/* general */
+
 .red {
   color: red;
 }
@@ -49,36 +48,37 @@ html {
   color: rgb(86, 1, 86);
 }
 
-/* TODO layouts for different screen widths */ 
+.close  {
+    display: none;
+}
+
+/* --- */ 
 
 .container-head {
   position: relative;
   width: 100%;
   max-width: 1500px;
+  margin-left: auto;
+  margin-right: auto;
+  text-align: center;
 }
 
 .headimg {
   display: flex;
-  justify-content: center;
-  width: 1500px;
+  max-width: 1500px;
   height: auto;
-  margin: auto;
-  padding: 0;
 }
 
 .nav {
+  display: inline-block;
   position: absolute;
   list-style: none;
-  text-align: center;
-  padding-bottom: 80px;
-  left: 50%;
-  transform: translate(-50%, -50%);
+  top: 90%;
+  left: 0;
+  right: 0;
+  margin: 0 auto;
 }
 
-.nav li{
-  display:inline;
-  
-}
 .nav a{
   display: inline-block;
   font-size: x-large;
@@ -94,8 +94,23 @@ html {
 }
 
 /* --- BODY --- */
+.heroimg {
+  display: flex;
+  width: 100%;
+  max-width: 1500px;
+  height: auto;
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: 0px;
+}
+
+
 span {
   padding: 10px;
+}
+
+.span40 {
+  padding: 40px;
 }
 
 .cont-h1 {
@@ -120,13 +135,7 @@ span {
   height: auto;
 }
 
-.heroimg {
-  display: flex;
-  justify-content: center;
-  width: 1500px;
-  height: auto;
-  margin:auto
-}
+
 
 /* --- CLOUD WITH MY PORTRAIT AND TEXT --- */
 .container-me {
@@ -142,12 +151,12 @@ span {
   margin: 20px;
   margin-top: 50px;
   width: 100%;
-  max-width: 300px;
+  max-height: 675px;
 }
 
 .portrait > img {
-  width: 300px;
-  height: auto;
+  width: auto;
+  height: 675px;
 }
 
 .cloud {
@@ -230,6 +239,42 @@ span {
 
 .body3:hover {
   background:url(./images/bodytxt3h.gif), no-repeat;
+}
+
+/* --- elevator --- */
+
+.elev-appears {
+  overflow:auto;
+}
+
+.elevator {
+  position: fixed;
+  bottom: 10px;
+  right: 10px;
+  width: auto;
+  max-height: 400px;
+}
+
+.elevator {
+  cursor: pointer;
+  border: none;
+  background: none;
+}
+
+.elev-img {
+  width: auto;
+  max-height: 400px;
+}
+
+#oops {
+  position: relative;
+  height: 500vh;
+}
+
+#oops-img {
+  position: absolute;
+  bottom: 1px;
+  width: auto;
 }
 
 /* --- FOOTER --- */
